--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <header>
-        <img class="logo" src="img/Vector.png" alt="Logo">
+        <img class="logo" src="./img/Vector.png" alt="Logo">
     </header>
 
     <main>
